# ctobotcc

./: .env.example  .gitignore  Cargo.toml  ctobot.log.2025-10-28  docker-compose.yml  knowledge.json
migrations/: 0001_init.sql  0002_indexes.sql
src/: context.rs  handlers.rs  main.rs  openai.rs  qa.rs
src/commands/: mail.rs  mod.rs  ro_db.rs
src/db/: codeclass.rs  ctoseo.rs  mod.rs
src/tamtam/: client.rs  models.rs
