[package]
name = "ctobotcc"
version = "0.1.0"
edition = "2024"

[dependencies]
# web / runtime
axum = "0.8.6"                           # роутер/экстракторы
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

# http-клиент для TamTam/OpenAI
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }

# конфиг/сериализация
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# БД: SQLx + MySQL + chrono
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
chrono = "0.4.42"

# логирование/трейсинг
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# утилиты
anyhow = "1.0.100"
thiserror = "2.0.17"
urlencoding = "2.1.3"
regex = "1.12.2"
strsim = "0.11.1"
